<!--
  ~     Copyright (C) 2017 Merbin J Anselm <merbinjanselm@gmail.com>
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<!--
  ~     Copyright (C) 2016  Merbin J Anselm <merbinjanselm@gmail.com>
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<resources>
    <string name="app_name">Torchie</string>
    <string name="activity_settings">Torchie Settings</string>
    <string name="service_torchiequick_name">Torchie Quick</string>
    <string name="accessibility_service_description">When \'Torchie Quick\' is enabled, turn on/off Torch just by holding Volume Buttons together</string>
    <string name="accessibility_service_description_2" translatable="false">@string/permission_warn</string>

    <string name="torchie_functionality">Torchie functionality</string>
    <string name="screen_on">Screen On</string>
    <string name="screen_lock">Lock Screen</string>
    <string name="screen_off">Screen Off</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="optimize_led_screen">AMOLED display optimization</string>
    <string name="cause_battery_drain_off" translatable="false">@string/battery_drain_warn</string>
    <string name="battery_drain_warn">Will cause battery drain</string>

    <string name="donate">Donate</string>
    <string name="tellfriend">Share</string>
    <string name="rate">Rate</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="help_feedback">Contact</string>
    <string name="enable">Enable</string>
    <string name="later">Later</string>
    <string name="loading">loading</string>
    <string name="select_donation_amount">Select a <b>donation</b> amount</string>
    <string name="thank_you">Thank You!</string>
    <string name="donate_via_paypal">Donate via Paypal</string>
    <string name="ok">OK</string>
    <string name="proceed">Proceed</string>
    <string name="dismiss">Dismiss</string>
    <string name="share">Share</string>

    <string name="share_info">Turn on torch just by holding volume buttons together with Torchie. Download Torchie now! </string>
    <string name="share_via">Share Torchie via</string>

    <string name="welcome"><b>Welcome</b></string>
    <string name="welcome_note">Make your life easier with <b>Torchie</b>! \n\nEnable <b>\'Torchie functionality\'</b> to turn on/off torch just by <b>holding volume buttons together</b>!\n\nTweak more in Torchie <b>Settings</b>!</string>
    <string name="got_it">Got It</string>
    <string name="permission_note">Enable <b>\'Torchie Quick\'</b> from Accessibility <b>Services</b> to experience Torchie.</string>
    <string name="permission_summary"><b>Usage of Accessibility Service </b> \nTorchie requires a service to run in background. An \'Accessibility Service\' can intercept Physical Hardware Key presses while a normal background \'Service\' can\'t. It does not do anything apart from intercepting Volume Key presses! I promise! </string>
    <string name="permission_warn"><b>About the PERMISSION - </b> \"<i>...observe text that you type &amp; observe your actions...</i>\"\nIt\'s threatening! Android throws a \'Key Event\' only when a HARDWARE KEY is pressed. It is by this way, Torchie captures Volume Key presses. But It is Android\'s <i>flaw</i>, showing the same WARNING even for NON-HARDWARE KEYBOARD ENABLED PHONES (except very old Android devices and Blackberry Priv which had hardware keyboard for typing).
        \nAlso, Torchie <b>DOES NOT HAVE INTERNET PERMISSION</b>, so it is impossible to <i>send</i> anything to anyone\n\nTorchie DOES NOT <i>COLLECT</i> anything from anyone. <a href="https://torchieapp.wordpress.com/help/">Learn more</a> </string>
    <string name="permission">Enable Torchie Functionality?</string>

    <string name="about_note"><b>Torchie</b> is made by two brothers\nMerbin J Anselm and Rebin J Anselm\nhello@anselm.in\n\nMany thanks to following great hearts, who helped to translate Torchie</string>
    <string name="about_anselm">About Anselm &amp; Anselm</string>
    <string name="official_website">Visit official site</string>
    <string name="join_community">Join Beta Community</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google+</string>

    <string name="donation_note">We\'ve spent lots of <b>hours</b> making Torchie, that you may not <b>lose a second</b> turning on torch!\nSupport the work of Torchie by donating us</string>
    <string name="thank_you_note">Your care motivates us!\n\nShare a word about Torchie with your family and friends!</string>
    <string name="donation_error">Oops! Error while sharing love with us!</string>
    <string name="proceed_paypal">Proceed to Paypal?</string>

    <string name="off">Off</string>
    <string name="indefinite">Indefinite</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="milliseconds">Millis</string>
    <string name="vibrate">Vibrate</string>
    <string name="torch_source">Torch source</string>
    <string name="flash_or_led">Flash/LED</string>
    <string name="screen_light">Screen light</string>
    <string name="toggle_method">Toggle method</string>
    <string name="both_vol_buttons">Volume + &amp; Volume -</string>
    <string name="volume_up">Volume +</string>
    <string name="volume_down">Volume -</string>
    <string name="hold_delay">Hold delay</string>
    <string name="immediate">Immediate</string>
    <string name="not_work_screen_off">Will not work in Screen off!</string>
    <string name="torch_time_out">Torch time-out</string>
    <string name="language_select">Choose language</string>

    <string name="proximity_sense">Proximity sense</string>
    <string name="proximity_note">Prevents response while in pocket</string>
    <string name="notify_title">Torchie service is disabled</string>
    <string name="notify_text">Touch to enable \'Torchie Quick\'</string>
    <string name="camera_busy">Camera is busy! Torch disabled</string>
    <string name="torch_unsupported">Torch unsupported</string>
    <string name="camera_error">Camera error!</string>
    <string name="system_language">System Language</string>
    <string name="proximity_error">Move phone away from proximity sensor and try again</string>

    <string name="notice"><b>Torchie</b> v%1$s  &#169; 2019\n\nTorchie comes with absolutely no warranty. This program is free software licensed under
    \nGNU General Public License v2.0\nFull source-code is available here https://github.com/anselm94/torchie-android\n</string>

</resources>
