<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2016  Merbin J Anselm <merbinjanselm@gmail.com>
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_donate"
        android:title="@string/donate" />
    <item
        android:id="@+id/menu_tell_friend"
        android:title="@string/tellfriend" />
    <item
        android:id="@+id/menu_rate"
        android:title="@string/rate" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/about" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/menu_help_feedback"
        android:title="@string/help_feedback" />
</menu>