<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="24dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/permission" />

        <TextView
            android:id="@+id/tv_permission_note"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/permission_note" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGrey600" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_permission_detail"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="@string/permission_warn" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_welcome_dismiss"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingRight="8dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_permission_later"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:minWidth="64dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/later"
            android:textAllCaps="true"
            android:textColor="@color/colorTealA200" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_permission_enable"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:minWidth="64dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/enable"
            android:textAllCaps="true"
            android:textColor="@color/colorTealA200" />

    </LinearLayout>


</LinearLayout>