<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="24dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/proceed_paypal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_permission_note"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text="@string/donation_error" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_welcome_dismiss"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/but_error_dismiss"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:minWidth="64dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/dismiss"
            android:textAllCaps="true"
            android:textColor="@color/colorTealA200" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <Button
            android:id="@+id/but_proceed_paypal"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:minWidth="64dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/proceed"
            android:textAllCaps="true"
            android:textColor="@color/colorTealA200"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>